@@ -2,7 +2,7 @@
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: url('MaterialIcons.ttf') format('truetype');
+  src: url('MaterialIcons.ttf?v=48') format('truetype');
   font-display: block;
 }
 
