@@ -26,6 +26,8 @@
 17. Add 'Advanced search' - by embedding andvasned search page from Classic
     skin.
 18. Add action to delete virtual libraries.
+19. Update MaterialIcons.ttf
+20. Replace some LMS icons in 'Radio' section with Material icons.
 
 1.0.2
 -----
